--- a/frontend/vending-machine-ui/package.json
+++ b/frontend/vending-machine-ui/package.json
@@ -13,6 +13,7 @@
         "axios": "^1.3.4",
         "clsx": "^1.2.1",
         "json.date-extensions": "1.2.2",
+        "notistack": "^3.0.0-alpha.11",
         "qs": "^6.11.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
